### Fixed
- Issue with the database command only fetching the human FASTA.